--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,10 @@
           <hr class="bg-white w-50" />
           <div class="d-flex align-items-center justify-content-center">
             Nombre:
-            <input id="nombre-form1" class="form-control d-inline mx-3" required />
+            <input class="form-control d-inline mx-3" required />
             Balance:
-            <input id="balance-form1" class="form-control d-inline mx-3" required />
-            <button type="button" class="btn btn-danger" onclick="nuevoUsuario()">Agregar</button>
+            <input class="form-control d-inline mx-3" required />
+            <button type="submit" class="btn btn-danger">Agregar</button>
           </div>
         </div>
       </form>
@@ -53,7 +53,7 @@
               <input type="text" class="form-control mx-2 w-auto d-inline" id="monto" />
             </div>
 
-            <button type="button" class="btn btn-danger" onclick="nuevaTransferencia()">Realizar</button>
+            <button type="submit" class="btn btn-danger">Relalizar</button>
           </div>
         </div>
       </form>
@@ -169,7 +169,7 @@
     $("#editButton").attr("onclick", `editUsuario('${id}')`);
   };
 
-  <!-- const editUsuario = async (id) => {
+  const editUsuario = async (id) => {
     const name = $("#nombreEdit").val();
     const balance = $("#balanceEdit").val();
     try {
@@ -187,10 +187,13 @@
     }
   };
 
-  const nuevoUsuario = (async (e) => {
+  $("form:first").submit(async (e) => {
     e.preventDefault();
     let nombre = $("form:first input:first").val();
     let balance = Number($("form:first input:nth-child(2)").val());
+    console.log("Nombre:", nombre);
+    console.log("Balance:", balance);
+
     try {
       const response = await fetch("http://localhost:3000/usuario", {
         method: "post",
@@ -206,11 +209,8 @@
       alert("Algo salió mal ..." + e);
     }
   });
-  $("form:first").submit(nuevoUsuario)
 
-
-
-  const nuevaTransferencia = (async (e) => {
+  $("form:last").submit(async (e) => {
     e.preventDefault();
     let emisor = $("form:last select:first").val();
     let receptor = $("form:last select:last").val();
@@ -235,7 +235,6 @@
       alert("Algo salió mal..." + e);
     }
   });
-  $("form:last").submit(nuevaTransferencia)
 
   const getUsuarios = async () => {
     const response = await fetch("http://localhost:3000/usuarios");
@@ -296,6 +295,5 @@
     const timeFormat = moment(date).format("LTS");
     return `${dateFormat} ${timeFormat}`;
   };
-  formatDate(); -->
-  
+  formatDate();
 </script>
